--- a/.github/workflows/telegram-notification.yml
+++ b/.github/workflows/telegram-notification.yml
@@ -11,7 +11,9 @@ jobs:
 
     steps:
     - name: Send notification
-      uses: appleboy/telegram-action@v0.2.0
+      #uses: appleboy/telegram-action@v0.2.0
+      #uses: anemusudha/telegram-action@v0.2.0
+      uses: appleboy/telegram-action@v1
       with:
         to: ${{ secrets.TELEGRAM_CHAT_ID }}
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
