--- a/.github/workflows/telegram-notification.yml
+++ b/.github/workflows/telegram-notification.yml
@@ -13,7 +13,8 @@ jobs:
     - name: Send notification
       #uses: appleboy/telegram-action@v0.2.0
       #uses: anemusudha/telegram-action@v0.2.0
-      uses: appleboy/telegram-action@v1
+      #uses: appleboy/telegram-action@v1
+      uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_CHAT_ID }}
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
