--- a/.github/workflows/telegram-notification.yml
+++ b/.github/workflows/telegram-notification.yml
@@ -19,7 +19,7 @@ jobs:
         to: ${{ secrets.TELEGRAM_CHAT_ID }}
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         message: |
-          Hello! This is a notification from GitHub Actions.
+          Hara hara mahadev!!!!! This notification is from Github Actions buddy..
           Commit message: ${{ github.event.head_commit.message }}
           Committer: ${{ github.event.head_commit.author.name }}
           Repository: ${{ github.repository }}
