Updated the name of telegram yml

--- a/.github/workflows/wrokflowcheck.yml
+++ b/.github/workflows/wrokflowcheck.yml
@@ -4,8 +4,11 @@ name: WorkflowRun
 
 on:
   workflow_run:
-    workflows: [CI]
+    workflows: [CI,TelegramNtfctn]
     types: [completed]
+
+    #workflows: [TelegramNtfctn]
+    #types: [completed]
 
 jobs:
   on-success:
