--- a/.github/workflows/wrokflowcheck.yml
+++ b/.github/workflows/wrokflowcheck.yml
@@ -21,3 +21,15 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
     steps:
       - run: echo 'The triggering workflow failed'
+  on-success1:    
+    steps:
+    - name: Send notification
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_CHAT_ID }}
+        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        message: |
+          Workflow was success--Nice job
+          Commit message: ${{ github.event.head_commit.message }}
+          Committer: ${{ github.event.head_commit.author.name }}
+          Repository: ${{ github.repository }}
