--- a/.github/workflows/telegram-notification.yml
+++ b/.github/workflows/telegram-notification.yml
@@ -20,6 +20,7 @@ jobs:
         token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         message: |
           Hara hara mahadev!!!!! This notification is from Github Actions buddy..
+          From the yml : telegram-notifications
           Commit message: ${{ github.event.head_commit.message }}
           Committer: ${{ github.event.head_commit.author.name }}
           Repository: ${{ github.repository }}
