--- a/.github/workflows/context.yml
+++ b/.github/workflows/context.yml
@@ -13,6 +13,10 @@ jobs:
         env:
           JOB_CONTEXT: ${{ toJson(job)}}
         run: echo "$JOB_CONTEXT"
+      - name: Dump steps context
+        env:
+          STEPS_CONTEXT: ${{ toJson(steps)}}
+        run: echo "$STEPS_CONTEXT"
 
        
 
