--- a/.github/workflows/push_to_antoherRepo.yml
+++ b/.github/workflows/push_to_antoherRepo.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Push to Another Repository
         run: |
-          #git remote add origin https://github.com/SudhakarAnemu/MARSRE2024.git
+          git remote add origin https://github.com/SudhakarAnemu/MARSRE2024.git
           git push https://github.com/SudhakarAnemu/MARSRE2024.git main
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_MARREPO }}
