--- a/.github/workflows/push_to_antoherRepo.yml
+++ b/.github/workflows/push_to_antoherRepo.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Git
         run: |
           git config --global user.email "sudhakar.anemu@gmail.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.name "SudhakarAnemu"
 
       - name: Push to Another Repository
         run: |
